<resources>
    <string name="app_name">Readi </string>
    <string name="text_the_best_workouts_in_readi">The Best Workouts in Readi</string>
    <string name="text_workouts_designed_around_military_training_principles_to_help_you_build_strength_endurance_and_maintain_consistent_fitness_progress">Workouts designed around military training principles to \nhelp you build strength, endurance, and maintain consistent \nfitness progress.</string>
    <string name="text_become_a_readi_member">Become a READI Member</string>
    <string name="text_already_have_an_account">Already have an account?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_get_the_workouts_training_and_discipline_your_strength_and_endurance_need">Get the workouts, training, and discipline your \nstrength and endurance need.</string>
    <string name="text_email_address">Email Address</string>
    <string name="text_write_email_address">Write Email Address</string>
    <string name="text_password">Password</string>
    <string name="text_write_password">Write Password</string>
    <string name="text_can_t_remember_your_password">Can’t remember your password?</string>
    <string name="text_reset_it">Reset It</string>
    <string name="text_apple">Apple</string>
    <string name="text_google">Google</string>
    <string name="text_don_t_have_an_account">Don’t have an account?</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_forget_password">Forget Password</string>
    <string name="text_enter_your_registered_email_and_we_ll_send_you_a_6_digit_otp_to_verify_your_account">Enter your registered email and we’ll send you a \n6-digit OTP to verify your account.</string>
    <string name="text_send_otp">Send OTP</string>
    <string name="text_verify_your_email">Verify Your Email</string>
    <string name="text_we_just_sent_an_otp_to_your_inbox">We just sent an OTP to your inbox.</string>
    <string name="text_don_t_get_it">Don’t get it?</string>
    <string name="text_resend_otp">Resend OTP</string>
    <string name="text_verify_amp_continue"><![CDATA[Verify & Continue]]></string>
    <string name="text_set_a_new_password">Set a New Password</string>
    <string name="text_make_it_strong_your_progress_deserves_security">Make it strong — your progress deserves \nsecurity.</string>
    <string name="text_remembered_it">Remembered it?</string>
    <string name="text_log_in_instead">Log in instead</string>
    <string name="text_reset_password">Reset Password</string>
    <string name="text_new_password">New Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_become_a_member">Become A Member</string>
    <string name="text_full_name">Full Name</string>
    <string name="text_write_full_name">Write Full Name</string>
    <string name="text_create_membership">Create Membership</string>
    <string name="text_get_all_of_our_emails_for_exclusive_offers_and_content_plus_coaching_on_how_to_use_the_readi_app">Get all of our emails for exclusive offers and content plus coaching on how to use the READI app.</string>
    <string name="text_complete_your_profile">Complete Your Profile</string>
    <string name="text_add_your_details_so_we_can_give_you_accurate_stats_and_insights">Add your details so we can give you accurate \nstats and insights.</string>
    <string name="text_save_amp_continue"><![CDATA[Save & Continue]]></string>
    <string name="text_gender">Gender</string>
    <string name="text_select_gender">Select Gender</string>
    <string name="text_age">Age</string>
    <string name="text_select_age">Select Age</string>
    <string name="text_height">Height</string>
    <string name="text_weight">Weight</string>
    <string name="text_upload_picture">Upload Picture</string>
    <string name="text_lbs">LBS</string>
    <string name="text_ft_in">ft+in</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_done">Done</string>
    <string name="text_select_weight">Select Weight</string>
    <string name="text_select_height">Select Height</string>
    <string name="text_set_your_height">Set Your Height</string>
    <string name="text_we_ll_use_this_to_personalize_your_fitness_stats_and_progress">We’ll use this to personalize your fitness stats and progress.</string>
    <string name="text_set_your_weight">Set Your Weight</string>
    <string name="text_track_progress_and_personalize_your_workout_insights">Track progress and personalize your workout insights.</string>
    <string name="text_get_your_training_program">Get Your Training Program</string>
    <string name="text_what_readi_members_are_saying">What READI members are saying</string>
    <string name="text_join_a_worldwide_military_inspired_fitness_community">Join a worldwide military-inspired fitness community.</string>
    <string name="text_i_used_to_struggle_with_staying_consistent_but_readi_keeps_me_on_track_the_military_style_workouts_and_daily_challenges_are_intense_but_so_rewarding_feels_like_having_a_personal_drill_sergeant_in_my_pocket">I used to struggle with staying consistent, but READI keeps me on track. The military-style workouts and daily challenges are intense but so rewarding. Feels like having a personal drill sergeant in my pocket!🔥</string>
    <string name="text_marissa_harison">Marissa Harison</string>
    <string name="text__5_0">5.0</string>
    <string name="text_">.</string>
    <string name="text_save">Save</string>
    <string name="text__21">21</string>
    <string name="text_18sp">18sp</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_other">Other</string>
    <string name="text_prefer_not_to_say">Prefer not to say</string>
    <string name="text_error">Error</string>
    <string name="text">.</string>
    <string name="text_physical_activity">Physical Activity</string>
    <string name="text_select_physical_activities">Select Physical Activities</string>
    <string name="text_select_your_daily_activity_level">Select Your Daily Activity Level</string>
    <string name="text_select_your_activity_level_to_customize_your_military_fitness_plan_accurately">Select your activity level to customize your military fitness plan accurately.</string>
    <string name="text_sedentary">Sedentary</string>
    <string name="text_typical_activities_of_daily_life_such_as_gardening_no_lifting_household_tasks_light_activity_while_sitting_etc"><![CDATA[Typical activities of daily life, such as gardening (no lifting), household tasks, light activity while sitting etc. ]]></string>
    <string name="text_low_active">Low active</string>
    <string name="text_low_active_typical_activities_of_daily_life_e_g_gardening_household_tasks_plus_30_to_60_minutes_of_moderate_activity_daily_e_g_cycling_leisurely_walking_3_4mph_etc"><![CDATA[Low active: Typical activities of daily life (e.g., gardening, household tasks) PLUS 30 to 60 minutes of moderate activity daily, e.g., cycling (leisurely), walking 3-4mph, etc]]></string>
    <string name="text_active">Active</string>
    <string name="text_active_typical_activities_of_daily_life_e_g_gardening_household_tasks_plus_more_than_60_minutes_of_moderate_activity_daily_e_g_cycling_leisurely_walking_3_4mph_etc"><![CDATA[Active: Typical activities of daily life (e.g., gardening, household tasks) PLUS more than 60 minutes of moderate activity daily, e.g., cycling (leisurely), walking 3-4mph, etc. ]]></string>
    <string name="text_very_active">Very Active</string>
    <string name="text_very_active_typical_activities_of_daily_life_e_g_gardening_household_tasks_plus_more_than_60_minutes_of_moderate_activity_daily_plus_additional_60_minutes_of_vigorous_activity_e_g_chopping_wood_climbing_hills_cycling_moderately_jogging_or_120_minutes_of_additional_moderate_activity"><![CDATA[Very active: Typical activities of daily life (e.g., gardening, household tasks) PLUS more than 60 minutes of moderate activity daily PLUS additional 60 minutes of vigorous activity, e.g., chopping wood, climbing hills, cycling (moderately), jogging OR 120 minutes of additional moderate activity.]]></string>
    <string name="text_question_3_of_5">Question 3 of 5</string>
    <string name="text_question_1_of_5">Question 1 of 5</string>
    <string name="text_question_4_of_5">Question 4 of 5</string>
    <string name="text_question_5_of_5">Question 5 of 5</string>
    <string name="text_choose_your_military_branch">Choose Your Military Branch</string>
    <string name="text_which_military_branch_would_you_like_your_training_to_be_inspired_by">Which military branch would you like your training to be inspired by?</string>
    <string name="text_next">Next</string>
    <string name="text_army">Army</string>
    <string name="text_question_2_of_5">Question 2 of 5</string>
    <string name="text_age_bracking">Age Bracking</string>
    <string name="text_creating_progress_with_the_best_challenges_for_your_stage_of_development">Creating progress with the best challenges for your stage of development.</string>
    <string name="text_message">Message</string>
    <string name="text_custom_radio_button">Custom Button</string>
    <string name="text_22dp">22dp</string>
    <string name="text_real_training_real_readiness">Real Training,\nReal Readiness</string>
    <string name="text_military_inspired_workouts_built_for_strength_endurance_and_discipline">Military-inspired workouts built for \nstrength, endurance, and discipline.</string>
    <string name="text_what_s_included">What\'s Included:</string>
    <string name="text_unlimited_access_to_all_training_programs">Unlimited access to all training programs</string>
    <string name="text_military_inspired_workouts_for_all_fitness_levels">Military-inspired workouts for all fitness levels</string>
    <string name="text_track_your_progress_with_advanced_analytics">Track your progress with advanced analytics</string>
    <string name="text_annual_plan">Annual Plan</string>
    <string name="text__7_day_free_trial">7-Day Free Trial</string>
    <string name="text__15">$15</string>
    <string name="text_month">/month</string>
    <string name="text_start_free_trial">Start Free Trial</string>
    <string name="text_save_50_per_year">Save 50% per year</string>
    <string name="text_billed_annually_at_180">Billed annually at $180</string>
    <string name="text_best_value">Best Value</string>
    <string name="text_monthly_plan">Monthly Plan</string>
    <string name="text__29_99">$29.99</string>
    <string name="text_most_flexible_membership_option">Most flexible membership option</string>
    <string name="text_calories">Calories</string>
    <string name="text_recovery">Recovery</string>
    <string name="text_fitness">Fitness</string>
    <string name="text_feed">Feed</string>
    <string name="text_more">More</string>
    <string name="text_post_workout_stretch">Post-Workout Stretch</string>
    <string name="text_essential_cooldown_stretches_for_muscle_recovery">Essential cooldown stretches for muscle \nrecovery</string>
    <string name="text_15_min">15 min</string>
    <string name="text_full_body">Full Body</string>
    <string name="text_low">Low</string>
    <string name="text_completed_on_feb_19_2026_12_23">Completed on Feb 19, 2026, 12:23</string>
    <string name="text_recovery_accomplished">Recovery Accomplished!</string>
    <string name="text_your_muscle_are_refreshed_and_ready_it_s_time_to_push_your_next_workout">Your muscle are refreshed and ready. It’s \ntime to push your next workout</string>
    <string name="text_session_complete">SESSION COMPLETE</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="text_are_you_sure_you_want_to_resend_the_otp">Are you sure you want to resend the OTP?</string>
    <string name="text_ok">ok</string>
</resources>