<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="5dp"
    android:background="@drawable/bg_12rd_fitness_categories"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitle"
        android:text="@string/resend_otp"
        android:textSize="18sp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvMessage"
        android:text="@string/text_are_you_sure_you_want_to_resend_the_otp"
        android:textSize="14sp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btnCancel"
            android:text="@string/text_cancel"
            android:textColor="@color/yellow_green_text"
            android:padding="10dp"
            android:fontFamily="@font/lato_bold"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/btnOk"
            android:text="@string/text_ok"
            android:textColor="@color/yellow_green_text"
            android:fontFamily="@font/lato_bold"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>