<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="365dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="15dp">

    <LinearLayout
        android:id="@+id/llMain1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:padding="24dp"
        android:orientation="vertical"
        android:background="@drawable/bg_annual_plan">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/llPrice"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_annual_plan"
                    android:textAllCaps="true"
                    android:textColor="@color/yellow_green_text"
                    android:fontFamily="@font/outfit_bold"
                    android:textSize="14sp"
                    android:letterSpacing="0.035"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text__7_day_free_trial"
                    android:textColor="@color/white"
                    android:fontFamily="@font/outfit_regular"
                    android:textSize="12sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_bold"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:text="@string/text__15"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/tvMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:textSize="12sp"
                    android:text="@string/text_month"
                    android:textColor="@color/white" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="13dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/bg_14rd_black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_save_50_per_year"
                android:textSize="12sp"
                android:fontFamily="@font/outfit_bold"
                android:textColor="@color/yellow_green_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_billed_annually_at_180"
                android:textSize="12sp"
                android:fontFamily="@font/outfit_bold"
                android:textColor="@color/white_70"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_primary"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_start_free_trial"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/outfit_bold"
                android:textColor="@color/white" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBestValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_28rd"
        android:padding="8dp"
        android:layout_alignTop="@id/llMain1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_best_value"
            android:textSize="12sp"
            android:fontFamily="@font/outfit_bold"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>