<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="365dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="70dp"
    android:padding="24dp"
    android:background="@drawable/bg_monthly_plan"
    android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/llPrice"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_monthly_plan"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:fontFamily="@font/outfit_bold"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text__7_day_free_trial"
                    android:textColor="@color/white_70"
                    android:fontFamily="@font/outfit_regular"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_bold"
                    android:textSize="32sp"
                    android:layout_gravity="center"
                    android:text="@string/text__29_99"
                    android:textColor="@color/white" />
                <TextView
                    android:id="@+id/tvMonth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/outfit_regular"
                    android:textSize="14sp"
                    android:text="@string/text_month"
                    android:layout_gravity="end"
                    android:textColor="@color/white_70" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginVertical="15dp"
            android:background="@drawable/bg_14rd_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_most_flexible_membership_option"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/white_80"
                android:layout_gravity="center"/>


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_primary"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_start_free_trial"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/outfit_bold"
                android:textColor="@color/white" />

        </RelativeLayout>

</LinearLayout>