<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp"
    android:layout_marginTop="15dp"
    android:background="@drawable/bg_10rd_category_detail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_post_workout_stretch"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/outfit_bold"
            android:textColor="@color/white"
            android:layout_toStartOf="@+id/btn_arrow_next"
            android:layout_marginEnd="10dp"/>

        <RelativeLayout
            android:id="@+id/btn_arrow_next"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_next_grey"
                android:layout_centerInParent="true"/>

        </RelativeLayout>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_essential_cooldown_stretches_for_muscle_recovery"
        android:textSize="14sp"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/light_grey_colour"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="3dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_8rd_grey">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_15_min"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-1dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:orientation="horizontal"
            android:background="@drawable/bg_8rd_grey"
            android:layout_marginStart="15dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_full_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_full_body"
                android:textSize="14sp"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:layout_marginTop="-1dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingVertical="10dp"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_8rd_linear">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_low" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_low"
            android:textSize="14sp"
            android:fontFamily="@font/outfit_regular"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_marginTop="-1dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/green_light_colour"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_completed_on_feb_19_2026_12_23"
        android:textSize="14sp"
        android:fontFamily="@font/outfit_regular"
        android:textColor="@color/yellow_green_text"
        android:layout_marginTop="10dp"/>

</LinearLayout>